--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <h1 class="display-4 fw-bold typing">Hi, I'm S M Moinul Islam</h1>
     <p class="lead fade-in">Technology Officer | IT Support | Networking & Development Enthusiast</p>
     <a href="#contact" class="btn btn-light btn-lg m-2 fade-in">Hire Me</a>
-    <a href="#" class="btn btn-outline-light btn-lg m-2 fade-in">View Resume</a>
+    <a href="resume.pdf" class="btn btn-outline-light btn-lg m-2 fade-in">View Resume</a>
   </div>
 </section>
 
