--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand fw-bold" href="#">Moinul Islam</a>
+    <a class="navbar-brand fw-bold" href="#">Moinul</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -92,7 +92,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-4 text-center">
-        <img src="https://via.placeholder.com/250" class="rounded-circle img-fluid" alt="Profile">
+        <img src="moin.jpeg" class="rounded-circle" alt="Profile"style="width: 200px;; height: 200px;;">
       </div>
       <div class="col-md-8">
         <h2>About Me</h2>
@@ -110,10 +110,14 @@
   <div class="container">
     <h2 class="text-center mb-4">Skills</h2>
     <div class="row text-center">
-      <div class="col-md-3"><div class="skill-icon">💻</div><p>Networking</p></div>
-      <div class="col-md-3"><div class="skill-icon">🐍</div><p>Python</p></div>
+      <div class="col-md-3"><div class="skill-icon">💻</div><p>Hardware & Networking</p></div>
+      <div class="col-md-3"><div class="skill-icon">🐍</div><p>Data Analysis</p></div>
       <div class="col-md-3"><div class="skill-icon">🌐</div><p>Web Development</p></div>
+      <div class="col-md-3"><div class="skill-icon">☁️</div><p>App Development</p></div>
       <div class="col-md-3"><div class="skill-icon">☁️</div><p>Cloud Services</p></div>
+      <div class="col-md-3"><div class="skill-icon">☁️</div><p>CCTV and Access Control System</p></div>
+      <div class="col-md-3"><div class="skill-icon">☁️</div><p>Server Setup and Maintainance</p></div>
+      <div class="col-md-3"><div class="skill-icon">☁️</div><p>CyberSecurity</p></div>
     </div>
   </div>
 </section>
@@ -127,8 +131,8 @@
         <div class="card">
           <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Project 1">
           <div class="card-body">
-            <h5 class="card-title">Project One</h5>
-            <p class="card-text">Description of project one.</p>
+            <h5 class="card-title">Making a QuadCopter using fundamental Material's</h5>
+            <p class="card-text">Project One</p>
             <a href="#" class="btn btn-primary">Live Demo</a>
           </div>
         </div>
@@ -137,8 +141,8 @@
         <div class="card">
           <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Project 2">
           <div class="card-body">
-            <h5 class="card-title">Project Two</h5>
-            <p class="card-text">Description of project two.</p>
+            <h5 class="card-title">Hospital Website Development</h5>
+            <p class="card-text">Project Two</p>
             <a href="#" class="btn btn-primary">Live Demo</a>
           </div>
         </div>
@@ -147,8 +151,8 @@
         <div class="card">
           <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Project 3">
           <div class="card-body">
-            <h5 class="card-title">Project Three</h5>
-            <p class="card-text">Description of project three.</p>
+            <h5 class="card-title">Successfully Deployed a Robust Server Infrastructure: Hybrid OS Setup</h5>
+            <p class="card-text">Project Three</p>
             <a href="#" class="btn btn-primary">Live Demo</a>
           </div>
         </div>
@@ -158,20 +162,63 @@
 </section>
 
 <!-- Experience -->
-<section id="experience" class="py-5 bg-light fade-in">
+<section id="experience" class="py-5 bg-light">
   <div class="container">
     <h2 class="text-center mb-4">Experience</h2>
-    <ul class="list-group">
-      <li class="list-group-item">
-        <strong>Technology Officer</strong> - Future IT Park (Present)
-      </li>
-      <li class="list-group-item">
-        <strong>Manager</strong> - Computer Park
-      </li>
-      <li class="list-group-item">
-        <strong>System Support Engineer</strong> - 250-Bed General Hospital Khulna
-      </li>
-    </ul>
+    <div class="accordion" id="experienceAccordion">
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+            Technology Officer - Future IT Park
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#experienceAccordion">
+          <div class="accordion-body">
+            <ul>
+              <li>Managed company IT infrastructure and network.</li>
+              <li>Implemented server setup and maintenance.</li>
+              <li>Provided technical support and troubleshooting.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            System Support Engineer - 250-Bed General Hospital Khulna
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#experienceAccordion">
+          <div class="accordion-body">
+            <ul>
+              <li>Provided system and network support for hospital IT.</li>
+              <li>Maintained hardware and software troubleshooting.</li>
+              <li>Assisted in IT infrastructure upgrades and security.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Manager - Computer Park
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#experienceAccordion">
+          <div class="accordion-body">
+            <ul>
+              <li>Supervised IT product sales and services.</li>
+              <li>Managed client relationships and support.</li>
+              <li>Coordinated team activities and training.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </div>
 </section>
 
@@ -191,13 +238,33 @@
       </div>
       <button type="submit" class="btn btn-primary w-100">Send Message</button>
     </form>
+    <p class="text-center mt-4">
+      Or email me directly at 
+      <a href="mailto:itsmoinul@gmail.com">itsmoinul@gmail.com</a>
+    </p>
   </div>
 </section>
 
+
 <!-- Footer -->
-<footer>
+<footer class="bg-dark text-white text-center py-4">
   <p>© 2025 S M Moinul Islam | All Rights Reserved</p>
+  <div class="mt-2">
+    <a href="https://github.com/smmoinul" target="_blank" class="mx-3" aria-label="GitHub Profile" rel="noopener noreferrer">
+      <img src="https://cdn-icons-png.flaticon.com/24/25/25231.png" alt="GitHub" />
+    </a>
+    <a href="https://linkedin.com/in/smmoinul" target="_blank" class="mx-3" aria-label="LinkedIn Profile" rel="noopener noreferrer">
+      <img src="https://cdn-icons-png.flaticon.com/24/174/174857.png" alt="LinkedIn" />
+    </a>
+    <a href="https://facebook.com/Moin.me" target="_blank" class="mx-3" aria-label="Facebook Profile" rel="noopener noreferrer">
+      <img src="https://cdn-icons-png.flaticon.com/24/733/733547.png" alt="Facebook" />
+    </a>
+    <a href="https://instagram.com/moinul.me" target="_blank" class="mx-3" aria-label="Instagram Profile" rel="noopener noreferrer">
+      <img src="https://cdn-icons-png.flaticon.com/24/2111/2111463.png" alt="Instagram" />
+    </a>
+  </div>
 </footer>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
