--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-4 text-center">
-        <img src="/moin.jpeg" class="rounded-circle" alt="Profile"style="width: 200px;; height: 200px;;">
+        <img src="moin.jpeg" class="rounded-circle" alt="Profile"style="width: 200px;; height: 200px;;">
       </div>
       <div class="col-md-8">
         <h2>About Me</h2>
